Tar i bruk mottakerroller istedenfor aktoersroller i brev-sammenheng. Oppdaterer utkast der det brekker. Bruker norske-myndigheter istedenfor etater i kall fra frontend - siden denne uansett er DWEB. Renamer ellers ting fra etater til norske-myndigheter. Vi trenger ikke adresser for TRYGDEMYNDIGHET så fjerner støtten til dette. Fjerner orgnrSettesAvSaksbehandler siden denne kun er brukt til å skille ANNEN_ORGANISASJON og ARBEIDSGIVER/VIRKSOMHET. Siden vi nå har egen rolle for dette trengs denne ikke. Fjernet Etat og FastMottakerMedOrgnr og lagde NorskMyndighet som tar over ansvarsområdet her. Objekt Mottaker som brukes istedenfor den gamle Mottaker. Denne inneholder rolle og ellers det vi tidligere har brukt av aktør. (personident, aktørid, orgnr ++) Oppdaterer tester, og funksjonsnavn inni tester for klarere språk. Litt endring i logikk i BrevmottakerService. Flyttet også her ting slik at avklarMottaker-funksjonene ligger sammen. Beklager om det skaper vanskeligheter når man leser. Flyttet også bort hentKontaktopplysning tli der den ble brukt siden den kun hadde én bruk. Endret MOTTAKER-data i prosessinstans til å være mottakerrolle istedfor aktoersroller. Dette kan hende ha en effekt på gamle saker - burde vi lage flyway på dette også, eller akseptere disse feilene?